Change feedback URL

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -13,7 +13,7 @@
        mat-list-item target="_blank" rel="noopener">
         <mat-icon>account_circle</mat-icon> &nbsp; Update Profile
     </a>
-    <a href="mailto:support@radialapps.com"
+    <a href="https://insti.app/feedback"
        mat-list-item target="_blank" rel="noopener">
         <mat-icon>feedback</mat-icon> &nbsp; Feedback
     </a>
