Add name of body to news title

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -5,6 +5,9 @@
 <div class="rl-header main-title"
     *ngIf="!dataService.isMobile()">
   Freshly In
+  <ng-container *ngIf="bodyid && feed">
+    - {{ feed[0].body.name }}
+  </ng-container>
 </div>
 
 <ng-container *ngIf="feed">
