--- a/src/app/mess/mess.component.css
+++ b/src/app/mess/mess.component.css
@@ -16,18 +16,31 @@
 
 .mess-card {
     max-width: 550px;
-    padding: 0;
-    margin: 5px auto;
+    padding: 12px;
+    margin: 8px;
     cursor: pointer;
     white-space: pre-wrap;
     margin-bottom: 0.7em;
 }
 
 .mess-card-head {
-    text-align: center;
     font-size: 1.1em;
-    padding: 6px 0;
-    margin: 0 8px;
+    font-weight: bold;
+    padding: 2px 0;
+    margin: 0;
+}
+
+.mess-card .time {
+    font-size: 0.94em;
+    margin: 12px 0;
+}
+
+.mess-card .time .head {
+    color: var(--primary-dark);
+}
+
+.mess-card .time .menu {
+    font-size: 0.93em;
 }
 
 .mess-table {
