--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
         <mat-icon>arrow_back</mat-icon>
     </button>
 
-    <h1 class="example-app-name">
-        {{ this.titleService.getTitle() }}
+    <h1 class="app-name">
+        {{ _title }}
     </h1>
 
     <div class="fill-space"></div>
