Process marked html in body and event details

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="description markdown">
-      <markdown [data]="body.description"></markdown>
+      <div [innerHTML]="dataService.processMDHTML(body.description | markdown)"></div>
     </div>
 
     <ng-container *ngIf="dataService.isMobile()">
