--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,12 @@
             *ngIf="!this.dataService.isLoggedIn()">
         Log In
     </button>
+
+    <button mat-icon-button
+            (click)="openNotifications()"
+            *ngIf="this.dataService.isLoggedIn()">
+        <mat-icon>notifications</mat-icon>
+    </button>
 </mat-toolbar>
 
 <ngx-flyout [(open)]="openFlyout"
