--- a/src/app/notify-card/notify-card.component.css
+++ b/src/app/notify-card/notify-card.component.css
@@ -6,12 +6,12 @@
 img {
     height: 40px;
     width: 40px;
-    border-radius: 50%;
+    border-radius: 20px;
 }
 
 .rl-header {
     padding: 5px;
-    margin-bottom: 2px;
+    height: 30px;
 }
 
 .clear-button {
