--- a/src/app/notify-card/notify-card.component.html
+++ b/src/app/notify-card/notify-card.component.html
@@ -13,7 +13,7 @@
 
     <img [src]="notification.actor.image_url"
          src-fallback="assets/placeholder.png"
-         class="object-cover" />
+         class="object-cover img-circle" />
 
     <span mat-line>{{ notification.actor.name }}</span>
     <span mat-line class="verb">
