--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,9 @@ mat-form-field, mat-form-field * {
 }
 
 .img-circle {
-    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%
 }
 
 .grey-text-on-white {
