--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -40,6 +40,8 @@ a:hover {
 
 img {
     border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
 }
 
 td, div {
@@ -63,6 +65,8 @@ td, div {
 }
 
 .pic {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
