--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -76,14 +76,14 @@
               [class.following]="event.user_ues === 1"
               (click)="markUES(1);"
               [disabled]="!dataService.isLoggedIn()">
-          Interested
+          Interested <span class="badge">{{ event.interested_count }}</span>
         </button>
         <button mat-button
                 class="follow-button"
               [class.following]="event.user_ues === 2"
               (click)="markUES(2);"
               [disabled]="!dataService.isLoggedIn()">
-          Going
+          Going <span class="badge">{{ event.going_count }}</span>
         </button>
       </div>
 
