--- a/src/app/event-card/event-card.component.html
+++ b/src/app/event-card/event-card.component.html
@@ -5,7 +5,7 @@
   <mat-card-header>
     <img mat-card-avatar
          [src]="event.image_url"
-         src-fallback="assets/placeholder.png"
+         [src-fallback]="event.bodies[0].image_url"
          class="object-cover" />
     <mat-card-title>{{ event.name }}</mat-card-title>
     <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}</mat-card-subtitle>
