--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -15,7 +15,12 @@
                        class="sub-card head-card"
                       (click)=OpenEvent(c.events[0])>
 
-                <img mat-card-image class="head-img" [src]="c.events[0].image_url" alt="" (click)=OpenEvent(c.events[0])>
+                <img mat-card-image
+                     class="head-img"
+                    [src]="c.events[0].image_url" alt=""
+                    (click)=OpenEvent(c.events[0])
+                    [src-fallback]="c.events[0].bodies[0].image_url">
+
                 <div> {{ c.events[0].name }} </div>
                 <span class="subhead">{{ dataService.GetDate(c.events[0].start_time) }} | {{ c.events[0].venues_str }}</span>
             </mat-card>
