Add Maitreya to developers

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -102,6 +102,7 @@ td, div {
 #yashkhem { background-image: url("https://insti.app/team-pics/yashkhem.jpg"); }
 #bavish { background-image: url("https://insti.app/team-pics/bavish.jpg"); }
 #mayu { background-image: url("https://insti.app/team-pics/mayu.jpg"); }
+#maitreya { background-image: url("https://insti.app/team-pics/maitreya.jpg"); }
 
 #tomar { background-image: url("https://insti.app/team-pics/tomar.jpg"); }
 #bijoy { background-image: url("https://insti.app/team-pics/bijoy.jpg"); }
