--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -33,6 +33,7 @@
     <div class="sub-dev floating"><div class="pic" id="yashkhem"></div><br>Yash Khemchandani</div>
     <div class="sub-dev floating"><div class="pic" id="bavish"></div><br>Bavish Kulur</div>
     <div class="sub-dev floating"><div class="pic" id="mayu"></div><br>Mayuresh Bhattu</div>
+    <div class="sub-dev floating"><div class="pic" id="maitreya"></div><br>Maitreya Verma</div>
   </div>
 
   <div class="title">Alumni</div>
