--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -49,7 +49,7 @@
 <a [routerLink]="['/blog/' + dataService.EncodeObject(api.TrainingBlog)]"
    routerLinkActive="active-link"
    mat-list-item>
-    <mat-icon>rss_feed</mat-icon> &nbsp; Training Blog
+    <mat-icon>rss_feed</mat-icon> &nbsp; Internship Blog
 </a>
 
 <a [routerLink]="['/calendar']"
