Change icon of PT blogs images

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -43,13 +43,13 @@
 <a [routerLink]="['/blog/' + dataService.EncodeObject(api.PlacementBlog)]"
    routerLinkActive="active-link"
    mat-list-item>
-    <mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog
+    <mat-icon>work</mat-icon> &nbsp; Placement Blog
 </a>
 
 <a [routerLink]="['/blog/' + dataService.EncodeObject(api.TrainingBlog)]"
    routerLinkActive="active-link"
    mat-list-item>
-    <mat-icon>rss_feed</mat-icon> &nbsp; Internship Blog
+    <mat-icon>work</mat-icon> &nbsp; Internship Blog
 </a>
 
 <a [routerLink]="['/calendar']"
