Add notify switch to add-event

--- a/src/app/add-event/add-event.component.css
+++ b/src/app/add-event/add-event.component.css
@@ -46,12 +46,17 @@
 }
 
 .full-width-details {
+    position: relative;
     left: 5%;
     width: 90%;
 }
 
 .action-button {
     margin-top: 10px;
+}
+
+.switch {
+    margin-bottom: 12px;
 }
 
 @media (max-width: 1200px) {
