--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -91,6 +91,13 @@
       </mat-form-field>
     </div>
 
+    <div class="full-width-details switch">
+      <mat-slide-toggle
+        [(ngModel)]="event.notify">
+        Notify followers on creation/updation
+      </mat-slide-toggle>
+    </div>
+
     <div>
       <button mat-raised-button color="accent"
               class="full-width-details"
