--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -8,7 +8,7 @@
     </mat-form-field>
 
   <ng-container *ngFor="let item of feed">
-    <div class="feed-card" (click)="openLink(item.link, $event)">
+    <div class="feed-card">
         <div class="title">{{item.title}}</div>
         {{item.published | date:"dd-MMM-yyyy HH:mm"}}
         <div [innerHTML]="dataService.processMDHTML(item.content | markdown)" class="markdown"></div>
