--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -9,7 +9,7 @@
   <div class="theme-header">
     <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
     <img class="header-image"
-        [src]="event.image_url"
+        [src]="getImageUrl()"
         src-fallback="assets/add_image_placeholder.svg"
         (click)="file.click()">
 
