--- a/src/app/event-card/event-card.component.html
+++ b/src/app/event-card/event-card.component.html
@@ -8,6 +8,10 @@
          [src-fallback]="event.bodies[0].image_url"
          class="object-cover" />
     <mat-card-title>{{ event.name }}</mat-card-title>
-    <mat-card-subtitle>{{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}</mat-card-subtitle>
+    <mat-card-subtitle>
+      <div id="subtitle">
+        {{ dataService.GetDate(event.start_time) }} | {{ event.venues_str }}
+      </div>
+    </mat-card-subtitle>
   </mat-card-header>
 </mat-card>
