Use ellipsis overflow for app title

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -70,6 +70,9 @@
 h1.app-name {
     margin-left: 8px;
     text-decoration: none;
+    max-width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .sidenav-container {
