--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -10,8 +10,13 @@
     margin-bottom: 2.5em;
 }
 
-.searchbox {
-    width: 100%;
+#searchbox {
+    margin: 10px 5%;
+    white-space: nowrap;
+}
+
+.searchinput {
+    min-width: 40%;
 }
 
 .title {
@@ -21,15 +26,23 @@
 }
 
 @media (min-width: 768px) {
-    .main-div {
-        width: 80%;
-    }
-
     .feed-card {
         margin-bottom: 3.5em;
     }
 
     .title {
         font-size: 1.85em
+    }
+}
+
+@media (max-width: 768px) {
+    .searchinput {
+        min-width: 60%;
+    }
+}
+
+@media (max-width: 560px) {
+    .searchinput {
+        min-width: 80%;
     }
 }
