--- a/src/app/explore/explore.component.css
+++ b/src/app/explore/explore.component.css
@@ -1,8 +1,6 @@
 #searchbox {
-    margin-left: 5%;
+    margin: 10px 5%;
     white-space: nowrap;
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 .margin-card {
