--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -46,6 +46,16 @@
       </mat-form-field>
     </div>
 
+    <div class="full-width-details roles">
+      <div *ngFor="let role of body.roles">
+        <div class="rl-header xs"> {{role.name}} </div>
+        <app-user-card *ngFor="let user of role.users_detail"
+                      [profile]="user"
+                      [role]="user.ldap_id">
+        </app-user-card>
+      </div>
+    </div>
+
     <div>
       <button mat-raised-button color="accent"
               class="full-width-details"
