--- a/src/styles.css
+++ b/src/styles.css
@@ -209,13 +209,13 @@ mat-form-field, mat-form-field *, .markdown * {
     font-size: 2.5em;
 }
 
-.rl-header.sm {
-    font-size: 2em;
-}
+.rl-header.sm {font-size: 2em;}
+.rl-header.xs { font-size: 1.4em; }
 
 @media (max-width: 768px) {
     .rl-header { font-size: 1.5em; }
     .rl-header.sm { font-size: 1.3em; }
+    .rl-header.xs { font-size: 1.1em; }
 }
 
 @media (min-width: 768px){
