--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -48,7 +48,15 @@
 
     <div class="full-width-details roles">
       <div *ngFor="let role of body.roles">
-        <div class="rl-header xs"> {{role.name}} </div>
+        <div>
+          <span class="rl-header xs">{{role.name}}</span>
+          <button mat-mini-fab
+                  class="edit-role mat-elevation-z1"
+                 (click)="editRole(role)">
+              <mat-icon>edit</mat-icon>
+          </button>
+        </div>
+
         <app-user-card *ngFor="let user of role.users_detail"
                       [profile]="user"
                       [role]="user.ldap_id">
