--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -48,20 +48,26 @@
 
     <div class="full-width-details roles">
       <div *ngFor="let role of body.roles">
-        <div>
-          <span class="rl-header xs">{{role.name}}</span>
-          <button mat-mini-fab
-                 *ngIf="this.dataService.HasBodyPermission(this.bodyId, 'Role')"
-                  class="edit-role mat-elevation-z1"
-                 (click)="editRole(role)">
-              <mat-icon>edit</mat-icon>
-          </button>
-        </div>
+        <ng-container *ngIf="!role.editing">
+          <div>
+            <span class="rl-header xs">{{role.name}}</span>
+            <button mat-icon-button
+                  *ngIf="this.dataService.HasBodyPermission(this.bodyId, 'Role')"
+                    class="edit-role"
+                  (click)="editRole(role)">
+                <mat-icon>edit</mat-icon>
+            </button>
+          </div>
 
-        <app-user-card *ngFor="let user of role.users_detail"
-                      [profile]="user"
-                      [role]="user.ldap_id">
-        </app-user-card>
+          <app-user-card *ngFor="let user of role.users_detail"
+                        [profile]="user"
+                        [role]="user.ldap_id">
+          </app-user-card>
+        </ng-container>
+
+        <app-update-role *ngIf="role.editing"
+                         [minrole]="role">
+        </app-update-role>
       </div>
     </div>
 
