Setup PUT on role edit

--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -66,7 +66,8 @@
         </ng-container>
 
         <app-update-role *ngIf="role.editing"
-                         [minrole]="role">
+                         [minrole]="role"
+                         (doneUpdate)="doneEditRole($event)">
         </app-update-role>
       </div>
     </div>
