--- a/src/app/update-role/update-role.component.html
+++ b/src/app/update-role/update-role.component.html
@@ -26,4 +26,12 @@
     [role]="user.ldap_id">
   </app-user-card>
 
+  <div class="submit">
+    <button mat-raised-button
+            color="warn"
+          (click)="submit()">
+      Update
+    </button>
+  </div>
+
 </div>
