--- a/src/app/update-role/update-role.component.html
+++ b/src/app/update-role/update-role.component.html
@@ -21,6 +21,17 @@
     </ng-container>
   </div>
 
+  <mat-form-field class="full-width">
+    <input #roll matInput #addBox
+            placeholder="Add Person"
+           [matAutocomplete]="auto"
+           [formControl]="addForm">
+
+    <mat-autocomplete name="personauto" #auto (optionSelected)="addPerson($event)">
+      <mat-option *ngFor="let p of explorePeople | async" [value]="p">{{p.name}}</mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+
   <app-user-card *ngFor="let user of role.users_detail"
     [profile]="user"
     [role]="user.ldap_id">
