Add cancel button to update role

--- a/src/app/update-role/update-role.component.html
+++ b/src/app/update-role/update-role.component.html
@@ -54,6 +54,11 @@
           (click)="submit()">
       Update
     </button>
+
+    <button mat-button
+          (click)="cancel()">
+      Cancel
+    </button>
   </div>
 
 </div>
