--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -47,6 +47,7 @@
     </div>
 
     <div class="full-width-details roles">
+      <span class="rl-header sm">Roles</span>
       <div *ngFor="let role of body.roles">
         <ng-container *ngIf="!role.editing">
           <table style="width: 100%">
