Add inheritable to update body

--- a/src/app/update-role/update-role.component.css
+++ b/src/app/update-role/update-role.component.css
@@ -33,6 +33,11 @@
     background-color: var(--accent-color);
 }
 
+.permissions button.hasred {
+    background-color: var(--warn-color);
+    color: white;
+}
+
 .user-table {
     width: 100%;
 }
