Allow role deletion

--- a/src/app/update-role/update-role.component.html
+++ b/src/app/update-role/update-role.component.html
@@ -62,6 +62,11 @@
       Update
     </button>
 
+    <button mat-button color="warn"
+          (click)="delete()">
+      Delete
+    </button>
+
     <button mat-button
           (click)="cancel()">
       Cancel
