--- a/src/app/update-role/update-role.component.css
+++ b/src/app/update-role/update-role.component.css
@@ -13,6 +13,10 @@
     font-weight: 200;
 }
 
+.with-hint {
+    margin-bottom: 5px;
+}
+
 .permissions {
     border-radius: 5px;
     width: 100%;
